<?xml version="1.0"?>
<package>
  <name>cnbiros_filters</name>
  <version>0.0.1</version>
  <description>CNBIROS Filters library</description>
  <author email="luca.tonin@epfl.ch">Luca Tonin</author>
  <maintainer email="luca.tonin@epfl.ch">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>roslib</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>

  <build_depend>filters</build_depend>
  <run_depend>filters</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <export>
     <filters plugin="${prefix}/default_plugins.xml" />
  </export>
</package>
